--- a/example/example.html
+++ b/example/example.html
@@ -113,39 +113,43 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <header class="header sticky-top">
-        <img class="logo" src="./images/logo.png" alt="logo" />
-        <div class="header-nav">
+    <header>
+      <div class="container">
+        <header class="header sticky-top">
+          <img class="logo" src="./images/logo.png" alt="logo" />
+          <div class="header-nav">
+            <nav>
+              <ul class="list-unstyled">
+                <li>精選影片</li>
+                <li>多樣商品</li>
+                <li>優質文章</li>
+                <li>健身房</li>
+              </ul>
+            </nav>
+            <button>註冊</button>
+            <button>登入</button>
+          </div>
+        </header>
+        <main class="main">
+          <h1 class="header-title">Artical</h1>
+        </main>
+        <aside class="side1"></aside>
+        <aside class="side2"></aside>
+        <footer class="footer">
           <nav>
             <ul class="list-unstyled">
-              <li>精選影片</li>
-              <li>多樣商品</li>
-              <li>優質文章</li>
-              <li>健身房</li>
+              <li class="active">所有文章</li>
+              <li>有氧運動</li>
+              <li>重量訓練</li>
+              <li>核心強化</li>
+              <li>健康料理</li>
+              <li>tabata</li>
             </ul>
           </nav>
-          <button>註冊</button>
-          <button>登入</button>
-        </div>
-      </header>
-      <main class="main">
-        <h1 class="header-title">Artical</h1>
-      </main>
-      <aside class="side1"></aside>
-      <aside class="side2"></aside>
-      <footer class="footer">
-        <nav>
-          <ul class="list-unstyled">
-            <li class="active">所有文章</li>
-            <li>有氧運動</li>
-            <li>重量訓練</li>
-            <li>核心強化</li>
-            <li>健康料理</li>
-            <li>tabata</li>
-          </ul>
-        </nav>
-      </footer>
-    </div>
+        </footer>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
