--- a/example/example.html
+++ b/example/example.html
@@ -142,8 +142,8 @@
               <li>有氧運動</li>
               <li>重量訓練</li>
               <li>核心強化</li>
-              <li>健康料理</li>
-              <li>tabata</li>
+              <li>增肌飲食</li>
+              <li>間歇訓練</li>
             </ul>
           </nav>
         </footer>
