--- a/example/example.html
+++ b/example/example.html
@@ -34,6 +34,7 @@
         height: 60px;
         display: flex;
         justify-content: space-between;
+        margin: 0 auto;
       }
       .logo {
         width: 162px;
@@ -64,6 +65,7 @@
         width: 1200px;
         height: 440px;
         position: relative;
+        margin: 0 auto;
       }
       .header-title {
         position: absolute;
@@ -76,18 +78,21 @@
         background-color: var(--secondary-color);
         width: 160px;
         height: 440px;
+        margin: 0 auto;
       }
       .side2 {
         grid-area: side2;
         background-color: var(--secondary-color);
         width: 160px;
         height: 440px;
+        margin: 0 auto;
       }
       .footer {
         grid-area: footer;
         background-color: var(--secondary-color);
         width: 1520px;
         height: 70px;
+        margin: 0 auto;
       }
       nav ul {
         display: flex;
