--- a/example/example.html
+++ b/example/example.html
@@ -100,7 +100,7 @@
         justify-content: center;
         align-items: center;
       }
-      footer nav ul li {
+      header footer nav ul li {
         width: 150px;
         text-align: center;
         padding: 20px 0px;
